# ai-study-assistant

./: .gitignore  README.md  advice.md  docker-compose.yml  start.bat  start.ps1  推荐系统设计文档.md  整体设计及架构.md  设计文档2.md
backend/: .env.example  alembic.ini  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 6800418ea6a6_init.py
backend/app/: config.py  logging_config.py  main.py
backend/app/api/: __init__.py  ai_tools.py  auth.py  chat.py  courses.py  documents.py  wrong_questions.py
backend/app/models/: __init__.py  chat.py  course.py  document.py  user.py  wrong_question.py
backend/app/rag/: __init__.py  embedding.py  qdrant_store.py  service.py
backend/app/schemas/: __init__.py
backend/app/services/: ai.py  auth.py
docs/: project_summary.md
frontend/: next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/courses/[id]/: page.tsx
frontend/app/dashboard/courses/[id]/chat/: page.tsx
frontend/app/dashboard/courses/[id]/wrong-questions/: page.tsx
frontend/components/: providers.tsx
frontend/components/ui/: button.tsx  input.tsx
frontend/lib/: store.ts
frontend/services/: api.ts
